apps/juice-shop/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: juice-shop-ingress-policy
  namespace: juice-shop
spec:
  podSelector:
    matchLabels:
      app: juice-shop
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
    - ports:
        - protocol: TCP
          port: 3000
